update gitignore for more dotfiles. use heroku-style connection strung in database.yml.

--- a/config/database.yml
+++ b/config/database.yml
@@ -80,6 +80,4 @@ test:
 #
 production:
   <<: *default
-  database: lwmd_production
-  username: lwmd
-  password: <%= ENV['LWMD_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
